bk_ida/gccida/g2/canon_hash
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2699:34: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned int  canon_hash( rtx x, machine_mode mode) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2774:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v27 = ( unsigned __int8 *)v2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2789:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v31 = ( __int64)v2[2]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2794:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v35.rtwint = ( __int64)v2[2].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2802:25: error: expected ')'
v34 = canon_hash( ( rtx)v33, ( machine_mode)*( unsigned __int8 *)( v33 + 2)); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2802:17: note: to match this '('
v34 = canon_hash( ( rtx)v33, ( machine_mode)*( unsigned __int8 *)( v33 + 2)); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2803:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v35.rtwint = ( __int64)v2[2].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2822:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v31 = ( __int64)v2[2]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2845:14: error: expected expression
v2 = *( rtx *)( v31 + 8); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2862:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v43.rtwint = ( __int64)v2->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2865:14: error: expected expression
v2 = *( rtx *)( v43.rtwint + 8); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2928:9: error: expected expression
*( rtx *)&v19[2 * v22 + 2], 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2929:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( *( _QWORD *)&v19[2 * v22 + 2] + 2LL)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2944:52: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& ( global_regs[rtuint] || !fixed_regs[rtuint] && mode_class_0[*( ( unsigned __int8 *)v2 + 2)] != MODE_CC) ) 
                                                   ^~~~~~~~~~~~
                                                   mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2948:55: error: expected ')'
if ( cached_regno != rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2948:32: note: to match this '('
if ( cached_regno != rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2948:78: error: expected expression
if ( cached_regno != rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2949:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( rtuint); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:2953:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)v2->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/cse.c:3034:27: error: expected expression
v4 += canon_hash( *( rtx *)&v45[2 * v47 + 2], VOIDmode); 
                          ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/canon_hash/src/obj/cse.o] Error 1
